JAMon 2.84: Complete Java 8 modernization and dependency updates
- Java compilation target: 1.6 → 8
- Build tools: Maven compiler 3.11.0 → 3.13.0, source plugin 2.2.1 → 3.3.1, javadoc plugin 2.9.1 → 3.10.1
- Testing: Mockito 5.14.2 → 5.19.0, AssertJ 1.7.0 → 3.26.3
- Container APIs: Servlet 2.4 → 3.1.0, JSP 2.0 → 2.3.3, JavaEE 6.0 → 7.0
- Application servers: Jetty9 9.2.1 → 10.0.24, Tomcat 6.0.53 → 9.0.97
- Framework: Spring 4.3.30 → 5.3.39, Hazelcast 3.12.6 → 3.12.13
- All 341 tests passing, backward compatibility maintained

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>